fix visibility for header

--- a/soydantarim/src/sass/pages/_products.scss
+++ b/soydantarim/src/sass/pages/_products.scss
@@ -9,7 +9,7 @@
   margin: 2.4rem auto;
   border-radius: 10px;
   position: relative;
-  z-index: 100;
+  z-index: 0;
   &::after {
     content: "";
     height: 100%;
